--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tech_Shop">
         <activity
+            android:name=".PurchaseActivity"
+            android:exported="false" />
+        <activity
             android:name=".WishListActivity"
             android:exported="false" />
         <activity
@@ -58,7 +61,7 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
